api_kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evaladez
  labels:
     tipo: desarrollo
